--- a/style.css
+++ b/style.css
@@ -53,3 +53,9 @@ li{
 .text-primary{
   color:white;
 }
+button {
+  margin-left: 1200px;
+  color: green;
+  border-color: green;
+  font-weight: bolder;
+}
